[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
  "black>=24.10.0,<25",
  "isort>=5.13.2,<6",
  "mypy>=1.14.0,<2",
  "poethepoet>=0.18.1,<0.19",
  "pre-commit>=4.0.1,<5",
  "pylint>=3.3.2,<4",
  "pytest-cov>=4.1.0,<5",
  "pytest>=8.3.4,<9",
  "ruff>=0.8.4,<0.9",
  "toml-sort>=0.24.2,<0.25"
]

[project]
authors = [{name = "Damien Robert, Hugo Raguet, Loic Landrieu"}]
dependencies = [
  "accelerate>=1.2.0,<2",
  "addict>=2.4.0,<3",
  "cattrs>=24.1.2,<25",
  "cryptography>=43.0.1,<44",
  "datasets>=2.20.0,<3",
  "ddd-dataset>=0.1.0,<0.2",
  "debugpy>=1.8.0,<2",
  "docker>=7.0.0,<8",
  "easydict~=1.10",
  "einops>=0.8.0,<0.9",
  "fairscale>=0.4.13,<0.5",
  "ffmpeg-python>=0.2.0,<0.3",
  "flatten-dict>=0.4.2,<0.5",
  "google-api-python-client>=2.124.0,<3",
  "gradio>=5.7.1,<6",
  "h5py>=3.12.1,<4",
  "huggingface-hub>=0.26.3,<0.27",
  "imageio[ffmpeg]>=2.31.1,<3",
  "invisible-watermark>=0.2.0,<0.3",
  "iopath>=0.1.10,<0.2",
  "ipdb>=0.13.13,<0.14",
  "ipython>=8.14.0,<9",
  "joblib>=1.4.2,<2",
  "jsonlines>=4.0.0,<5",
  "lightning>=2.0.7,<3",
  "loguru>=0.7.0,<0.8",
  "lovely-tensors>=0.1.15,<0.2",
  "matplotlib>=3.7.2,<4",
  "mediapipe>=0.10.3,<0.11",
  "moviepy>=1.0.3,<2",
  "natsort>=8.4.0,<9",
  "ninja>=1.11.1.1,<2",
  "numpy>=1,<2",
  "opencv-python-headless>=4.10.0.84,<5",
  "packaging~=24.1",
  "pandas>=2.0.3,<3",
  "parameterized>=0.9.0,<0.10",
  "pathlib>=1.0.1,<2",
  "peft>=0.10.0,<0.11",
  "pip~=24.0",
  "plyfile>=1.0.1,<2",
  "pydantic>=2.7.1,<3",
  "pyrender>=0.1.45,<0.2",
  "pytube>=15.0.0,<16",
  "pyyaml>=6.0.1,<7",
  "readchar>=4.0.5,<5",
  "requests-mock>=1.12.1,<2",
  "requests>=2.31.0,<3",
  "rich>=13.7.0,<14",
  "scikit-image>=0.21.0,<0.22",
  "scikit-learn>=1.3.0,<2",
  "scipy>=1.11.1,<2",
  "setuptools>=69,<70",
  "sha256sum>=2022.6.11,<2023",
  "shapely>=2.0.1,<3",
  "sk-video>=1.1.10,<2",
  "supervision>=0.11.1,<0.12",
  "tabulate>=0.9.0,<0.10",
  "tensorboard==2.13",
  "termcolor>=2.3.0,<3",
  "terminaltables>=3.1.10,<4",
  "timm==0.6.7",
  "torch-scatter",
  "torch==2.4.1",
  "torchinfo>=1.8.0,<2",
  "torchvision~=0.19.1",
  "tqdm>=4.65.0,<5",
  "transformers>=4.45.2,<5",
  "transforms3d>=0.4.1,<0.5",
  "typeguard>=4.4.1,<5",
  "tyro>=0.9.2,<0.10",
  "viser>=0.2.7,<0.3",
  "vispy>=0.14.0,<0.15",
  "wandb>=0.17.7,<0.18",
  "webdataset>=0.2.96,<0.3",
  "wget~=3.2",
  "wheel>=0.44.0,<0.45",
  "yacs>=0.1.8,<0.2",
  "yapf>=0.40.1,<0.41",
  "colorhash>=2.0.0",
  "pyrootutils>=1.0.4",
  "numba>=0.60.0",
  "pgeof",
  "torch-geometric==2.3.0",
  "ipywidgets>=8.1.5",
  "ipyfilechooser>=0.6.0",
  "torch-cluster",
  "hydra-core>=1.3.2",
  "omegaconf>=2.3.0",
  "hydra-colorlog>=1.2.0",
]
description = ""
name = "superpoint_transformer"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

[project.optional-dependencies]
metric = [
    "torchmetrics==0.11.4",
]

[tool.hatch.build.targets.sdist]
include = [
  "src"
]

[tool.hatch.build.targets.wheel]
include = [
  "src"
]


[tool.tomlsort]
all = true

[[tool.uv.index]]
explicit = true
name = "Pytorch_Cuda"
url = "https://download.pytorch.org/whl/cu121"

[tool.uv.sources]
torch = {index = "Pytorch_Cuda"}
torch-scatter = {url = "https://data.pyg.org/whl/torch-2.4.0%2Bcu121/torch_scatter-2.1.2%2Bpt24cu121-cp310-cp310-linux_x86_64.whl"}
torchvision = {index = "Pytorch_Cuda"}
pgeof = { git = "https://github.com/drprojects/point_geometric_features.git" }
torch-cluster = { url = "https://data.pyg.org/whl/torch-2.4.0%2Bcu121/torch_cluster-1.6.3%2Bpt24cu121-cp310-cp310-linux_x86_64.whl" }
